--- a/views/landing-view/landing-view.scss
+++ b/views/landing-view/landing-view.scss
@@ -2,6 +2,16 @@
     text-align: center;
 
     .lama-img {
-        opacity: .8;
+        opacity: .7;
+    }
+
+    .button-container {
+        margin-top: 1rem;
+
+        button {
+            border: #ccc 1px solid;
+            padding: .4rem .5rem;
+            border-radius: 3px;
+        }
     }
 }
